[package]
name = "cpu-gpu-scheduling"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
rayon = "1.7"
crossbeam = "0.8"

[lib]
name = "scheduling_lib"
path = "src/lib.rs"

[[bin]]
name = "cpu_scheduling_demo"
path = "src/bin/cpu_scheduling.rs"

[[bin]]
name = "gpu_scheduling_demo"
path = "src/bin/gpu_scheduling.rs"

[[bin]]
name = "hybrid_scheduling_demo"
path = "src/bin/hybrid_scheduling.rs"

[[bin]]
name = "benchmark_demo"
path = "src/bin/benchmark.rs"
